--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: Peter Giordano
+description: Portfolio Website
+show_downloads: false
 theme: jekyll-theme-cayman
